--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="row justify-content-center">
         <div class="col-6 text-center">
           <p>Site by Angela Peng</p>
-          <a href="https://angel.co/angela-peng" target="_blank"><i class="fab fa-angellist"></i></a>
+          <a href="https://angel.co/applistics-gmail-com" target="_blank"><i class="fab fa-angellist"></i></a>
           <a href="mailto:applistics@gmail.com?subject=Hello%20from%20your%20portfolio" target="_top"><i class="fas fa-envelope"></i></a>
           <a href="https://github.com/gigibirdy?tab=repositories" target="_blank"><i class="fab fa-github-square"></i></a>
         </div>
