--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <div class="modal fade united_gear" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-        <video src="images/united_gear.mov" width="100%" controls auto>
+        <video src="images/united_gear.MOV" width="100%" controls auto>
         </video>
       </div>
     </div>
