updated tarot project

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <img src="images/food_app.png" class="card-img-top">
             <div class="card-body" style="background: #f8f1f1; height: 178px;">
               <h5 class="card-title">Food App</h5>
-              <p class="card-text">React | NutritionixAPI | CSS</p><br>
+              <p class="card-text">ReactJS | NutritionixAPI | CSS</p><br>
               <button type="button" class="btn btn-light" data-toggle="modal" data-target=".food_app" style="color: #f8f1f1; background: rgba(247, 156, 29, 0.5);">Demo</button>
               <a href="https://github.com/gigibirdy/happy_diet" target="_blank"><button class="btn btn-light" style="color: #f8f1f1; background: rgba(247, 156, 29, 0.5);">Source Code</button></a>
             </div>
@@ -83,12 +83,12 @@
 
         <div class="col col-12 col-md-4">
           <div class="card" style="">
-            <img src="images/musicianWebPage.png" class="card-img-top" alt="...">
-            <div class="card-body" style="background:#f9f3ec; height: 178px;">
-              <h5 class="card-title">Musician Webpage</h5>
-              <p class="card-text">Bootstrap4 | CSS | jQuery</p><br>
-              <button type="button" class="btn btn-light" data-toggle="modal" data-target=".musicianWebPage" style="background: rgba(96, 32, 75, 0.7); color:#f9f3ec;">Demo</button>
-              <a href="https://github.com/gigibirdy/musician_webpage" target="_blank"><button class="btn btn-light" style="background: rgba(96, 32, 75, 0.7); color:#f9f3ec;">Source Code</button></a>
+            <img src="images/tarot.png" class="card-img-top" alt="...">
+            <div class="card-body" style="background:#ffdee6; height: 178px;">
+              <h5 class="card-title">Instance of Tarot</h5>
+              <p class="card-text">ReactJS | NodeJS | Mongo Atlas | Express | @material-ui</p>
+              <a href="https://safe-coast-49251.herokuapp.com/" target="_blank"><button class="btn btn-light" style="background: rgba(178,252,255, 0.7);">Heroku</button></a>
+              <a href="https://github.com/gigibirdy/instance_of_tarot" target="_blank"><button class="btn btn-light" style="background: rgba(178,252,255, 0.7);">Source Code</button></a>
             </div>
           </div>
         </div>
@@ -127,14 +127,7 @@
       </div>
     </div>
   </div>
-  <div class="modal fade musicianWebPage" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <video src="images/musicianWebPage.mov" width="100%" controls autoplay>
-        </video>
-      </div>
-    </div>
-  </div>
+
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
