--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <div class="card-body" style="background: #f8f1f1; height: 178px;">
               <h5 class="card-title">Food App</h5>
               <p class="card-text">ReactJS | NutritionixAPI | CSS</p><br>
+              <a href="https://hidden-tor-25217.herokuapp.com/" target="_blank"><button class="btn btn-light" style="color: #f8f1f1; background: rgba(247, 156, 29, 0.5);">Heroku</button></a>
               <button type="button" class="btn btn-light" data-toggle="modal" data-target=".food_app" style="color: #f8f1f1; background: rgba(247, 156, 29, 0.5);">Demo</button>
               <a href="https://github.com/gigibirdy/happy_diet" target="_blank"><button class="btn btn-light" style="color: #f8f1f1; background: rgba(247, 156, 29, 0.5);">Source Code</button></a>
             </div>
@@ -75,8 +76,8 @@
             <div class="card-body" style="background:#eaf5ff; height: 178px;">
               <h5 class="card-title">United Gear</h5>
               <p class="card-text">Express | NodeJS | MongoDB | CSS Bootstrap4</p>
-              <button type="button" class="btn btn-light" data-toggle="modal" data-target=".united_gear" style="background: #a9c6de;">Demo</button>
-              <a href="https://github.com/gigibirdy/united_gear" target="_blank"><button class="btn btn-light" style="background: #a9c6de;">Source Code</button></a>
+              <button type="button" class="btn btn-light" data-toggle="modal" data-target=".united_gear" style=" color: grey; background: #a9c6de;">Demo</button>
+              <a href="https://github.com/gigibirdy/united_gear" target="_blank"><button class="btn btn-light" style="color: grey; background: #a9c6de;">Source Code</button></a>
             </div>
           </div>
         </div>
@@ -87,8 +88,8 @@
             <div class="card-body" style="background:#ffdee6; height: 178px;">
               <h5 class="card-title">Instance of Tarot</h5>
               <p class="card-text">ReactJS | NodeJS | Mongo Atlas | Express | @material-ui</p>
-              <a href="https://safe-coast-49251.herokuapp.com/" target="_blank"><button class="btn btn-light" style="background: rgba(178,252,255, 0.7);">Heroku</button></a>
-              <a href="https://github.com/gigibirdy/instance_of_tarot" target="_blank"><button class="btn btn-light" style="background: rgba(178,252,255, 0.7);">Source Code</button></a>
+              <a href="https://safe-coast-49251.herokuapp.com/" target="_blank"><button class="btn btn-light" style="color: grey; background: rgba(178,252,255, 0.7);">Heroku</button></a>
+              <a href="https://github.com/gigibirdy/instance_of_tarot" target="_blank"><button class="btn btn-light" style="color: grey; background: rgba(178,252,255, 0.7);">Source Code</button></a>
             </div>
           </div>
         </div>
