add phrase hunt

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <div id="projects" class="">
     <div class="container">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-12 text-center mb-5">
           <h2>PROJECT PORTFOLIO</h2>
         </div>
@@ -90,6 +90,18 @@
               <p class="card-text">ReactJS | NodeJS | Mongo Atlas | Express | @material-ui</p>
               <a href="https://safe-coast-49251.herokuapp.com/" target="_blank"><button class="btn btn-light" style="color: grey; background: rgba(178,252,255, 0.7);">Heroku</button></a>
               <a href="https://github.com/gigibirdy/instance_of_tarot" target="_blank"><button class="btn btn-light" style="color: grey; background: rgba(178,252,255, 0.7);">Source Code</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col col-12 col-md-4">
+          <div class="card" style="">
+            <img src="images/phrase_hunt.png" class="card-img-top" alt="...">
+            <div class="card-body" style="background:turquoise; height: 178px;">
+              <h5 class="card-title">Phrase Hunt</h5>
+              <p class="card-text">Javascript</p>
+              <a href="https://gigibirdy.github.io/oop_game-v2/" target="_blank"><button class="btn btn-light" style="color: grey; background: white;">Demo</button></a>
+              <a href="https://github.com/gigibirdy/oop_game-v2" target="_blank"><button class="btn btn-light" style="color: grey; background: white;">Source Code</button></a>
             </div>
           </div>
         </div>
