update recent projects

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
   </div>
-
+<!-- projects -->
   <div id="projects" class="">
     <div class="container">
       <div class="row">
@@ -59,37 +59,72 @@
         </div>
         <div class="col col-12 col-md-4 mb-5">
           <div class="card" style="">
-            <img src="images/food_app.png" class="card-img-top">
-            <div class="card-body" style="background: #f8f1f1; height: 178px;">
-              <h5 class="card-title">Food App</h5>
-              <p class="card-text">ReactJS | NutritionixAPI | CSS</p><br>
-              <a href="https://hidden-tor-25217.herokuapp.com/" target="_blank"><button class="btn btn-light" style="color: #f8f1f1; background: rgba(247, 156, 29, 0.5);">Heroku</button></a>
-              <button type="button" class="btn btn-light" data-toggle="modal" data-target=".food_app" style="color: #f8f1f1; background: rgba(247, 156, 29, 0.5);">Demo</button>
-              <a href="https://github.com/gigibirdy/happy_diet" target="_blank"><button class="btn btn-light" style="color: #f8f1f1; background: rgba(247, 156, 29, 0.5);">Source Code</button></a>
+            <img src="images/phrase_hunter.png" class="card-img-top">
+            <div class="card-body" style="height: 178px;">
+              <h5 class="card-title">Phrase Hunter</h5>
+              <p class="card-text">JavaScript | HTML | CSS</p><br>
+              <a href="https://gigibirdy.github.io/oop_game-v2/" target="_blank"><button class="btn btn-dark">Demo</button></a>
+              <a href="https://github.com/gigibirdy/oop_game-v2" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
           </div>
         </div>
 
         <div class="col col-12 col-md-4 mb-5">
           <div class="card" style="">
-            <img src="images/united_gear.png" class="card-img-top" alt="...">
-            <div class="card-body" style="background:#eaf5ff; height: 178px;">
-              <h5 class="card-title">United Gear</h5>
-              <p class="card-text">Express | NodeJS | MongoDB | CSS Bootstrap4</p>
-              <button type="button" class="btn btn-light" data-toggle="modal" data-target=".united_gear" style=" color: grey; background: #a9c6de;">Demo</button>
-              <a href="https://github.com/gigibirdy/united_gear" target="_blank"><button class="btn btn-light" style="color: grey; background: #a9c6de;">Source Code</button></a>
+            <img src="images/Employee_Directory.png" class="card-img-top">
+            <div class="card-body" style="height: 178px;">
+              <h5 class="card-title">Employee Directory</h5>
+              <p class="card-text">JavaScript | Fetch API | CSS</p><br>
+              <!-- <a href="#" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
+              <a href="https://github.com/gigibirdy/Public_API_Requests" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
           </div>
         </div>
 
-        <div class="col col-12 col-md-4">
+        <div class="col col-12 col-md-4 mb-5">
           <div class="card" style="">
-            <img src="images/tarot.png" class="card-img-top" alt="...">
-            <div class="card-body" style="background:#ffdee6; height: 178px;">
-              <h5 class="card-title">Instance of Tarot</h5>
-              <p class="card-text">ReactJS | NodeJS | Mongo Atlas | Express | @material-ui</p>
-              <a href="https://safe-coast-49251.herokuapp.com/" target="_blank"><button class="btn btn-light" style="color: grey; background: rgba(178,252,255, 0.7);">Heroku</button></a>
-              <a href="https://github.com/gigibirdy/instance_of_tarot" target="_blank"><button class="btn btn-light" style="color: grey; background: rgba(178,252,255, 0.7);">Source Code</button></a>
+            <img src="images/interactive_form.png" class="card-img-top">
+            <div class="card-body" style="height: 178px;">
+              <h5 class="card-title">interactive Form</h5>
+              <p class="card-text">JavaScript | jQuery | CSS</p><br>
+              <a href="https://gigibirdy.github.io/interactive-form/" target="_blank"><button class="btn btn-dark">Demo</button></a>
+              <a href="https://github.com/gigibirdy/interactive-form" target="_blank"><button class="btn btn-dark">Source Code</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col col-12 col-md-4 mb-5">
+          <div class="card" style="">
+            <img src="images/pagination.png" class="card-img-top">
+            <div class="card-body" style="height: 178px;">
+              <h5 class="card-title">Pagination and Filtering</h5>
+              <p class="card-text">JavaScript | HTML | CSS</p><br>
+              <a href="https://gigibirdy.github.io/List_Pagination_and_Filtering/" target="_blank"><button class="btn btn-dark">Demo</button></a>
+              <a href="https://github.com/gigibirdy/List_Pagination_and_Filtering" target="_blank"><button class="btn btn-dark">Source Code</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col col-12 col-md-4 mb-5">
+          <div class="card" style="">
+            <img src="images/library_manager.png" class="card-img-top">
+            <div class="card-body" style="height: 178px;">
+              <h5 class="card-title">SQL Library Manager</h5>
+              <p class="card-text">JavaScript | NodeJS | Express | Pug | SQL</p><br>
+              <!-- <a href="#" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
+              <a href="https://github.com/gigibirdy/SQL_Library_Manager" target="_blank"><button class="btn btn-dark">Source Code</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col col-12 col-md-4 mb-5">
+          <div class="card" style="">
+            <img src="images/react_gallery_app.png" class="card-img-top">
+            <div class="card-body" style="height: 178px;">
+              <h5 class="card-title">React Gallery App</h5>
+              <p class="card-text">React | JSX | Flickr API</p><br>
+              <!-- <a href="#" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
+              <a href="https://github.com/gigibirdy/react_gallery_app" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
           </div>
         </div>
@@ -110,24 +145,6 @@
     </div>
   </footer>
 
-  <!-- projects -->
-
-  <div class="modal fade food_app" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <video src="images/food_app.mov" width="100%" controls auto>
-        </video>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade united_gear" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <video src="images/united_gear.MOV" width="100%" controls auto>
-        </video>
-      </div>
-    </div>
-  </div>
 
 
 
