add demo for emloyee directory

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="card-body" style="height: 178px;">
               <h5 class="card-title">Employee Directory</h5>
               <p class="card-text">JavaScript | Fetch API | CSS</p><br>
-              <!-- <a href="#" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
+              <a href="https://gigibirdy.github.io/Public_API_Requests/" target="_blank"><button class="btn btn-dark">Demo</button></a>
               <a href="https://github.com/gigibirdy/Public_API_Requests" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
           </div>
@@ -129,7 +129,7 @@
           </div>
         </div>
 
-    
+
       </div>
     </div>
   </div>
