--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <h2>PROJECT PORTFOLIO</h2>
         </div>
         <div class="col col-12 col-md-4 mb-5">
+
           <div class="card" style="">
             <img src="images/phrase_hunter.png" class="card-img-top">
             <div class="card-body" style="height: 178px;">
@@ -78,7 +79,6 @@
             </div>
           </div>
         </div>
-
         <div class="col col-12 col-md-4 mb-5">
           <div class="card" style="">
             <img src="images/Employee_Directory.png" class="card-img-top">
@@ -93,12 +93,12 @@
 
         <div class="col col-12 col-md-4 mb-5">
           <div class="card" style="">
-            <img src="images/interactive_form.png" class="card-img-top">
+            <img src="images/school_database.png" class="card-img-top">
             <div class="card-body" style="height: 178px;">
-              <h5 class="card-title">interactive Form</h5>
-              <p class="card-text">JavaScript | jQuery | CSS</p><br>
-              <a href="https://gigibirdy.github.io/interactive-form/" target="_blank"><button class="btn btn-dark">Demo</button></a>
-              <a href="https://github.com/gigibirdy/interactive-form" target="_blank"><button class="btn btn-dark">Source Code</button></a>
+              <h5 class="card-title">School Database</h5>
+              <p class="card-text">React | JSX | Express | Sequelize | SQLite</p><br>
+              <a href="https://evening-oasis-52310.herokuapp.com/" target="_blank"><button class="btn btn-dark">Demo</button></a>
+              <a href="https://github.com/gigibirdy/REST_API_School_Database_v1" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
           </div>
         </div>
