remove demo phrase hunter

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Angela's Portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/55dd0b99d5.js"></script>
+  <script src="https://kit.fontawesome.com/55dd0b99d5.js"></script>
   <link rel="stylesheet" href="index.css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149636913-1"></script>
-<script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149636913-1"></script>
+  <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -74,7 +74,7 @@
             <div class="card-body" style="height: 178px;">
               <h5 class="card-title">Phrase Hunter</h5>
               <p class="card-text">JavaScript | HTML | CSS</p><br>
-              <a href="https://gigibirdy.github.io/oop_game-v2/" target="_blank"><button class="btn btn-dark">Demo</button></a>
+              <!-- <a href="https://gigibirdy.github.io/oop_game-v2/" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
               <a href="https://github.com/gigibirdy/oop_game-v2" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
           </div>
