add demo phrase hunter

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="card-body" style="height: 178px;">
               <h5 class="card-title">Phrase Hunter</h5>
               <p class="card-text">JavaScript | HTML | CSS</p><br>
-              <!-- <a href="https://gigibirdy.github.io/oop_game-v2/" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
+              <a href="https://gigibirdy.github.io/oop_game-v2/" target="_blank"><button class="btn btn-dark">Demo</button></a>
               <a href="https://github.com/gigibirdy/oop_game-v2" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
           </div>
