--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <img src="images/phrase_hunter.png" class="card-img-top">
             <div class="card-body" style="height: 178px;">
               <h5 class="card-title">Phrase Hunter</h5>
-              <p class="card-text">JavaScript | HTML | CSS</p><br>
+              <p class="card-text mb-0">JavaScript | HTML | CSS</p><br>
               <a href="https://gigibirdy.github.io/oop_game-v2/" target="_blank"><button class="btn btn-dark">Demo</button></a>
               <a href="https://github.com/gigibirdy/oop_game-v2" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
@@ -84,7 +84,7 @@
             <img src="images/Employee_Directory.png" class="card-img-top">
             <div class="card-body" style="height: 178px;">
               <h5 class="card-title">Employee Directory</h5>
-              <p class="card-text">JavaScript | Fetch API | CSS</p><br>
+              <p class="card-text mb-0">JavaScript | Fetch API | CSS</p><br>
               <a href="https://gigibirdy.github.io/Public_API_Requests/" target="_blank"><button class="btn btn-dark">Demo</button></a>
               <a href="https://github.com/gigibirdy/Public_API_Requests" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
@@ -96,7 +96,7 @@
             <img src="images/school_database.png" class="card-img-top">
             <div class="card-body" style="height: 178px;">
               <h5 class="card-title">School Database</h5>
-              <p class="card-text">React | JSX | Express | Sequelize | SQLite</p><br>
+              <p class="card-text mb-0">React | JSX | Express | Sequelize | SQLite</p><br>
               <a href="https://evening-oasis-52310.herokuapp.com/" target="_blank"><button class="btn btn-dark">Demo</button></a>
               <a href="https://github.com/gigibirdy/REST_API_School_Database_v1" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
@@ -105,12 +105,12 @@
 
         <div class="col col-12 col-md-4 mb-5">
           <div class="card" style="">
-            <img src="images/pagination.png" class="card-img-top">
+            <img src="./images/chat_app.png" class="card-img-top">
             <div class="card-body" style="height: 178px;">
-              <h5 class="card-title">Pagination and Filtering</h5>
-              <p class="card-text">JavaScript | HTML | CSS</p><br>
-              <a href="https://gigibirdy.github.io/List_Pagination_and_Filtering/" target="_blank"><button class="btn btn-dark">Demo</button></a>
-              <a href="https://github.com/gigibirdy/List_Pagination_and_Filtering" target="_blank"><button class="btn btn-dark">Source Code</button></a>
+              <h5 class="card-title">Chat App</h5>
+              <p class="card-text mb-0">React | ChatKit SDK | Express | MongoDB | Bootstrap</p><br>
+              <!-- <a href="" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
+              <a href="https://github.com/gigibirdy/chat_app" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
           </div>
         </div>
@@ -120,7 +120,7 @@
             <img src="images/library_manager.png" class="card-img-top">
             <div class="card-body" style="height: 178px;">
               <h5 class="card-title">SQL Library Manager</h5>
-              <p class="card-text">JavaScript | NodeJS | Express | Pug | SQL</p><br>
+              <p class="card-text mb-0">JavaScript | NodeJS | Express | Pug | SQL</p><br>
               <!-- <a href="#" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
               <a href="https://github.com/gigibirdy/SQL_Library_Manager" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
@@ -132,7 +132,7 @@
             <img src="images/react_gallery_app.png" class="card-img-top">
             <div class="card-body" style="height: 178px;">
               <h5 class="card-title">React Gallery App</h5>
-              <p class="card-text">React | JSX | Flickr API</p><br>
+              <p class="card-text mb-0">React | JSX | Flickr API</p><br>
               <!-- <a href="#" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
               <a href="https://github.com/gigibirdy/react_gallery_app" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
