--- a/index.html
+++ b/index.html
@@ -67,18 +67,19 @@
         <div class="col-12 text-center mb-5">
           <h2>PROJECT PORTFOLIO</h2>
         </div>
-        <div class="col col-12 col-md-4 mb-5">
 
+        <div class="col col-12 col-md-4 mb-5">
           <div class="card" style="">
-            <img src="images/phrase_hunter.png" class="card-img-top">
+            <img src="images/diet_app.png" class="card-img-top">
             <div class="card-body" style="height: 178px;">
-              <h5 class="card-title">Phrase Hunter</h5>
-              <p class="card-text">JavaScript | HTML | CSS</p><br>
-              <a href="https://gigibirdy.github.io/oop_game-v2/" target="_blank"><button class="btn btn-dark">Demo</button></a>
-              <a href="https://github.com/gigibirdy/oop_game-v2" target="_blank"><button class="btn btn-dark">Source Code</button></a>
+              <h5 class="card-title">Diet App</h5>
+              <p class="card-text mb-0">Redux | LitElement | LitHTML | Nutritionix API</p><br>
+              <!-- <a href="#" target="_blank"><button class="btn btn-dark">Demo</button></a> -->
+              <a href="https://github.com/gigibirdy/diet_app" target="_blank"><button class="btn btn-dark">Source Code</button></a>
             </div>
           </div>
         </div>
+
         <div class="col col-12 col-md-4 mb-5">
           <div class="card" style="">
             <img src="images/Employee_Directory.png" class="card-img-top">
@@ -139,6 +140,17 @@
           </div>
         </div>
 
+        <div class="col col-12 col-md-4 mb-5">
+          <div class="card" style="">
+            <img src="images/phrase_hunter.png" class="card-img-top">
+            <div class="card-body" style="height: 178px;">
+              <h5 class="card-title">Phrase Hunter</h5>
+              <p class="card-text">JavaScript | HTML | CSS</p><br>
+              <a href="https://gigibirdy.github.io/oop_game-v2/" target="_blank"><button class="btn btn-dark">Demo</button></a>
+              <a href="https://github.com/gigibirdy/oop_game-v2" target="_blank"><button class="btn btn-dark">Source Code</button></a>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
